@@ -13,6 +13,7 @@ import static org.eclipse.openvsx.cache.CacheService.CACHE_EXTENSION_JSON;
 import static org.eclipse.openvsx.cache.CacheService.GENERATOR_EXTENSION_JSON;
 import static org.eclipse.openvsx.entities.FileResource.*;
 import static org.eclipse.openvsx.util.UrlUtil.createApiUrl;
+import static org.eclipse.openvsx.util.UrlUtil.createApiVersionUrl;
 
 import java.io.InputStream;
 import java.util.*;
@@ -25,7 +26,6 @@ import com.google.common.base.Strings;
 import com.google.common.collect.Maps;
 
 import org.eclipse.openvsx.cache.CacheService;
-import org.eclipse.openvsx.dto.*;
 import org.eclipse.openvsx.eclipse.EclipseService;
 import org.eclipse.openvsx.entities.*;
 import org.eclipse.openvsx.json.*;
@@ -226,38 +226,39 @@ public class LocalRegistryService implements IExtensionRegistry {
             param.extensionName = split[1];
         }
 
-        List<ExtensionVersionDTO> extensionVersions = new ArrayList<>();
+        List<ExtensionVersion> extensionVersions = new ArrayList<>();
         var targetPlatform = TargetPlatform.isValid(param.targetPlatform) ? param.targetPlatform : null;
 
         // Add extension by UUID (public_id)
         if (!Strings.isNullOrEmpty(param.extensionUuid)) {
-            extensionVersions.addAll(repositories.findActiveExtensionVersionDTOsByExtensionPublicId(targetPlatform, param.extensionUuid));
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionPublicId(targetPlatform, param.extensionUuid));
         }
         // Add extensions by namespace UUID (public_id)
         if (!Strings.isNullOrEmpty(param.namespaceUuid)) {
-            extensionVersions.addAll(repositories.findActiveExtensionVersionDTOsByNamespacePublicId(targetPlatform, param.namespaceUuid));
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByNamespacePublicId(targetPlatform, param.namespaceUuid));
         }
 
         // Add extension by namespace and name
         if (!Strings.isNullOrEmpty(param.namespaceName) && !Strings.isNullOrEmpty(param.extensionName)) {
-            extensionVersions.addAll(repositories.findActiveExtensionVersionDTOsByExtensionName(targetPlatform, param.extensionName, param.namespaceName));
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionName(targetPlatform, param.extensionName, param.namespaceName));
         // Add extensions by namespace
         } else if (!Strings.isNullOrEmpty(param.namespaceName)) {
-            extensionVersions.addAll(repositories.findActiveExtensionVersionDTOsByNamespaceName(targetPlatform, param.namespaceName));
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByNamespaceName(targetPlatform, param.namespaceName));
         // Add extensions by name
         } else if (!Strings.isNullOrEmpty(param.extensionName)) {
-            extensionVersions.addAll(repositories.findActiveExtensionVersionDTOsByExtensionName(targetPlatform, param.extensionName));
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionName(targetPlatform, param.extensionName));
         }
 
         extensionVersions = extensionVersions.stream()
-                .collect(Collectors.groupingBy(ExtensionVersionDTO::getId))
+                .collect(Collectors.groupingBy(ExtensionVersion::getId))
                 .values()
                 .stream()
                 .map(l -> l.get(0))
                 .collect(Collectors.toList());
 
         var extensionIds = extensionVersions.stream()
-                .map(ExtensionVersionDTO::getExtensionId)
+                .map(ExtensionVersion::getExtension)
+                .map(Extension::getId)
                 .collect(Collectors.toSet());
 
         var reviewCounts = getReviewCounts(extensionIds);
@@ -289,11 +290,108 @@ public class LocalRegistryService implements IExtensionRegistry {
                 .map(ev -> {
                     var latest = latestVersions.get(getLatestVersionKey(ev));
                     var latestPreRelease = latestPreReleases.get(getLatestVersionKey(ev));
-                    var reviewCount = reviewCounts.getOrDefault(ev.getExtensionId(), 0);
-                    var preview = previewsByExtensionId.get(ev.getExtensionId());
-                    var versions = versionStrings.get(ev.getExtensionId());
+                    var reviewCount = reviewCounts.getOrDefault(ev.getExtension().getId(), 0);
+                    var preview = previewsByExtensionId.get(ev.getExtension().getId());
+                    var versions = versionStrings.get(ev.getExtension().getId());
                     var fileResources = fileResourcesByExtensionVersionId.getOrDefault(ev.getId(), Collections.emptyList());
-                    return toExtensionVersionJson(ev, latest, latestPreRelease, reviewCount, preview, versions, fileResources, membershipsByNamespaceId);
+                    return toExtensionVersionJson(ev, latest, latestPreRelease, reviewCount, preview, versions, targetPlatform, fileResources, membershipsByNamespaceId);
+                })
+                .collect(Collectors.toList());
+
+        return result;
+    }
+
+    @Override
+    public QueryResultJson queryV2(QueryParamJsonV2 param) {
+        if (!Strings.isNullOrEmpty(param.extensionId)) {
+            var split = param.extensionId.split("\\.");
+            if (split.length != 2 || split[0].isEmpty() || split[1].isEmpty())
+                throw new ErrorResultException("The 'extensionId' parameter must have the format 'namespace.extension'.");
+            if (!Strings.isNullOrEmpty(param.namespaceName) && !param.namespaceName.equals(split[0]))
+                throw new ErrorResultException("Conflicting parameters 'extensionId' and 'namespaceName'");
+            if (!Strings.isNullOrEmpty(param.extensionName) && !param.extensionName.equals(split[1]))
+                throw new ErrorResultException("Conflicting parameters 'extensionId' and 'extensionName'");
+            param.namespaceName = split[0];
+            param.extensionName = split[1];
+        }
+
+        List<ExtensionVersion> extensionVersions = new ArrayList<>();
+        var targetPlatform = TargetPlatform.isValid(param.targetPlatform) ? param.targetPlatform : null;
+
+        // Add extension by UUID (public_id)
+        if (!Strings.isNullOrEmpty(param.extensionUuid)) {
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionPublicId(targetPlatform, param.extensionUuid));
+        }
+        // Add extensions by namespace UUID (public_id)
+        if (!Strings.isNullOrEmpty(param.namespaceUuid)) {
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByNamespacePublicId(targetPlatform, param.namespaceUuid));
+        }
+
+        // Add extension by namespace and name
+        if (!Strings.isNullOrEmpty(param.namespaceName) && !Strings.isNullOrEmpty(param.extensionName)) {
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionName(targetPlatform, param.extensionName, param.namespaceName));
+        // Add extensions by namespace
+        } else if (!Strings.isNullOrEmpty(param.namespaceName)) {
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByNamespaceName(targetPlatform, param.namespaceName));
+        // Add extensions by name
+        } else if (!Strings.isNullOrEmpty(param.extensionName)) {
+            extensionVersions.addAll(repositories.findActiveExtensionVersionsByExtensionName(targetPlatform, param.extensionName));
+        }
+
+        extensionVersions = extensionVersions.stream()
+                .collect(Collectors.groupingBy(ExtensionVersion::getId))
+                .values()
+                .stream()
+                .map(l -> l.get(0))
+                .collect(Collectors.toList());
+
+        var extensionIds = extensionVersions.stream()
+                .map(ev -> ev.getExtension().getId())
+                .collect(Collectors.toSet());
+
+        var reviewCounts = getReviewCounts(extensionIds);
+        var versionStrings = getVersionStrings(extensionVersions);
+        var latestVersions = getLatestVersions(extensionVersions);
+        var latestPreReleases = getLatestVersions(extensionVersions, true);
+        var latestGlobalVersions = getLatestGlobalVersions(extensionVersions);
+        var latestGlobalPreReleases = getLatestGlobalVersions(extensionVersions, true);
+        var previewsByExtensionId = getPreviews(extensionIds);
+        var fileResourcesByExtensionVersionId = getFileResources(extensionVersions);
+        var membershipsByNamespaceId = getMemberships(extensionVersions);
+
+        // Add a specific version of an extension
+        if (!Strings.isNullOrEmpty(param.namespaceName) && !Strings.isNullOrEmpty(param.extensionName)
+                && !Strings.isNullOrEmpty(param.extensionVersion) && !param.includeAllVersions.equals("true")) {
+            extensionVersions = extensionVersions.stream()
+                    .filter(ev -> ev.getVersion().equals(param.extensionVersion))
+                    .filter(ev -> ev.getExtension().getName().equals(param.extensionName))
+                    .filter(ev -> ev.getExtension().getNamespace().getName().equals(param.namespaceName))
+                    .collect(Collectors.toList());
+        }
+        // Only add latest version of an extension
+        if(Strings.isNullOrEmpty(param.extensionVersion) && !param.includeAllVersions.equals("true")) {
+            extensionVersions = new ArrayList<>(latestVersions.values());
+        }
+        // Revert to default includeAllVersions value when extensionVersion is set
+        if(!Strings.isNullOrEmpty(param.extensionVersion) && param.includeAllVersions.equals("true")) {
+            param.includeAllVersions = "links";
+        }
+
+        var addAllVersions = param.includeAllVersions.equals("links");
+        var result = new QueryResultJson();
+        result.extensions = extensionVersions.stream()
+                .filter(ev -> addToResultV2(ev, param))
+                .sorted(getExtensionVersionComparator())
+                .map(ev -> {
+                    var latest = latestVersions.get(getLatestVersionKey(ev));
+                    var latestPreRelease = latestPreReleases.get(getLatestVersionKey(ev));
+                    var reviewCount = reviewCounts.getOrDefault(ev.getExtension().getId(), 0);
+                    var preview = previewsByExtensionId.get(ev.getExtension().getId());
+                    var globalLatest = addAllVersions ? latestGlobalVersions.get(ev.getExtension().getId()) : null;
+                    var globalLatestPreRelease = addAllVersions ? latestGlobalPreReleases.get(ev.getExtension().getId()) : null;
+                    var versions = addAllVersions ? versionStrings.get(ev.getExtension().getId()) : null;
+                    var fileResources = fileResourcesByExtensionVersionId.getOrDefault(ev.getId(), Collections.emptyList());
+                    return toExtensionVersionJsonV2(ev, latest, latestPreRelease, globalLatest, globalLatestPreRelease, reviewCount, preview, versions, targetPlatform, fileResources, membershipsByNamespaceId);
                 })
                 .collect(Collectors.toList());
 
@@ -302,101 +400,120 @@ public class LocalRegistryService implements IExtensionRegistry {
 
     private Map<Long, Integer> getReviewCounts(Collection<Long> extensionIds) {
         return !extensionIds.isEmpty()
-                ? repositories.findAllActiveReviewCountsByExtensionId(extensionIds)
+                ? repositories.findActiveReviewCountsByExtensionId(extensionIds)
                 : Collections.emptyMap();
     }
 
-    private Map<Long, Set<String>> getVersionStrings(List<ExtensionVersionDTO> extensionVersions) {
+    private Map<Long, Set<String>> getVersionStrings(List<ExtensionVersion> extensionVersions) {
         if(extensionVersions.isEmpty()) {
             return Collections.emptyMap();
         }
 
         return extensionVersions.stream()
-                .collect(Collectors.groupingBy(ExtensionVersionDTO::getExtensionId, Collectors.mapping(ExtensionVersionDTO::getVersion, Collectors.toSet())));
+                .collect(Collectors.groupingBy(ev -> ev.getExtension().getId(), Collectors.mapping(ExtensionVersion::getVersion, Collectors.toSet())));
     }
 
-    private Map<String, ExtensionVersionDTO> getLatestVersions(List<ExtensionVersionDTO> extensionVersions) {
+    private Map<String, ExtensionVersion> getLatestVersions(List<ExtensionVersion> extensionVersions) {
         return getLatestVersions(extensionVersions, false);
     }
 
-    private Map<String, ExtensionVersionDTO> getLatestVersions(List<ExtensionVersionDTO> extensionVersions, boolean onlyPreRelease) {
-        var latestStream = extensionVersions.stream();
-        if(onlyPreRelease) {
-            latestStream = latestStream.filter(ExtensionVersionDTO::isPreRelease);
-        }
-
-        return latestStream.collect(Collectors.groupingBy(this::getLatestVersionKey))
+    private Map<String, ExtensionVersion> getLatestVersions(List<ExtensionVersion> extensionVersions, boolean onlyPreRelease) {
+        return extensionVersions.stream()
+                .collect(Collectors.groupingBy(this::getLatestVersionKey))
                 .values()
                 .stream()
-                .map(list -> versions.getLatest(list, true))
+                .map(list -> versions.getLatest(list, true, onlyPreRelease))
+                .filter(Objects::nonNull)
                 .collect(Collectors.toMap(this::getLatestVersionKey, ev -> ev));
     }
 
-    private String getLatestVersionKey(ExtensionVersionDTO extVersion) {
-        return extVersion.getExtensionId() + "@" + extVersion.getTargetPlatform();
+    private Map<Long, ExtensionVersion> getLatestGlobalVersions(List<ExtensionVersion> extensionVersions) {
+        return getLatestGlobalVersions(extensionVersions, false);
+    }
+
+    private Map<Long, ExtensionVersion> getLatestGlobalVersions(List<ExtensionVersion> extensionVersions, boolean onlyPreRelease) {
+        return extensionVersions.stream()
+                .collect(Collectors.groupingBy(ev -> ev.getExtension().getId()))
+                .values()
+                .stream()
+                .map(list -> versions.getLatest(list, false, onlyPreRelease))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toMap(ev -> ev.getExtension().getId(), ev -> ev));
+    }
+
+    private String getLatestVersionKey(ExtensionVersion extVersion) {
+        return extVersion.getExtension().getId() + "@" + extVersion.getTargetPlatform();
     }
 
     private Map<Long, Boolean> getPreviews(Set<Long> extensionIds) {
-        return repositories.findAllActiveExtensionVersionDTOs(extensionIds, null).stream()
-                .collect(Collectors.groupingBy(ExtensionVersionDTO::getExtensionId))
+        return repositories.findActiveExtensionVersions(extensionIds, null).stream()
+                .collect(Collectors.groupingBy(ev -> ev.getExtension().getId()))
                 .values()
                 .stream()
                 .map(list -> versions.getLatest(list, false))
-                .collect(Collectors.toMap(ExtensionVersionDTO::getExtensionId, ExtensionVersionDTO::isPreview));
+                .collect(Collectors.toMap(ev -> ev.getExtension().getId(), ExtensionVersion::isPreview));
     }
 
-    private Map<Long, List<FileResourceDTO>> getFileResources(List<ExtensionVersionDTO> extensionVersions) {
+    private Map<Long, List<FileResource>> getFileResources(List<ExtensionVersion> extensionVersions) {
         if(extensionVersions.isEmpty()) {
             return Collections.emptyMap();
         }
 
         var fileTypes = List.of(DOWNLOAD, MANIFEST, ICON, README, LICENSE, CHANGELOG);
         var extensionVersionIds = extensionVersions.stream()
-                .map(ExtensionVersionDTO::getId)
+                .map(ExtensionVersion::getId)
                 .collect(Collectors.toSet());
 
-        return repositories.findAllFileResourceDTOsByExtensionVersionIdAndType(extensionVersionIds, fileTypes).stream()
-                .collect(Collectors.groupingBy(FileResourceDTO::getExtensionVersionId));
+        return repositories.findFileResourcesByExtensionVersionIdAndType(extensionVersionIds, fileTypes).stream()
+                .collect(Collectors.groupingBy(fr -> fr.getExtension().getId()));
     }
 
-    private Map<Long, List<NamespaceMembershipDTO>> getMemberships(List<ExtensionVersionDTO> extensionVersions) {
+    private Map<Long, List<NamespaceMembership>> getMemberships(List<ExtensionVersion> extensionVersions) {
         if(extensionVersions.isEmpty()) {
             return Collections.emptyMap();
         }
 
         var namespaceIds = extensionVersions.stream()
-                .map(ExtensionVersionDTO::getExtension)
-                .map(ExtensionDTO::getNamespace)
-                .map(NamespaceDTO::getId)
+                .map(ExtensionVersion::getExtension)
+                .map(Extension::getNamespace)
+                .map(Namespace::getId)
                 .collect(Collectors.toSet());
 
-        return repositories.findAllNamespaceMembershipDTOs(namespaceIds).stream()
-                .collect(Collectors.groupingBy(NamespaceMembershipDTO::getNamespaceId));
+        return repositories.findNamespaceMemberships(namespaceIds).stream()
+                .collect(Collectors.groupingBy(nm -> nm.getNamespace().getId()));
     }
 
-    private Comparator<ExtensionVersionDTO> getExtensionVersionComparator() {
-        // comparators combine comparator ExtensionVersion.SORT_COMPARATOR and order by of RepositoryService.findActiveExtensions
-        var versionComparator = Comparator.<ExtensionVersionDTO, SemanticVersion>comparing(ExtensionVersionDTO::getSemanticVersion)
-                .thenComparing(ExtensionVersionDTO::getTimestamp)
-                .reversed();
-
-        return Comparator.<ExtensionVersionDTO, String>comparing(ev -> ev.getExtension().getName())
-                .thenComparing(versionComparator);
+    private Comparator<ExtensionVersion> getExtensionVersionComparator() {
+        return Comparator.<ExtensionVersion, String>comparing(ev -> ev.getExtension().getName())
+                .thenComparing(ExtensionVersion.SORT_COMPARATOR);
     }
 
-    private boolean addToResult(ExtensionVersionDTO extVersion, QueryParamJson param) {
-        if (mismatch(extVersion.getVersion(), param.extensionVersion))
+    private boolean addToResult(ExtensionVersion extVersion, QueryParamJson param) {
+        return addToResult(extVersion, param.extensionVersion, param.extensionName, param.namespaceName, param.extensionUuid, param.namespaceUuid);
+    }
+
+    private boolean addToResultV2(ExtensionVersion extVersion, QueryParamJsonV2 param) {
+        return addToResult(extVersion, param.extensionVersion, param.extensionName, param.namespaceName, param.extensionUuid, param.namespaceUuid);
+    }
+
+    private boolean addToResult(
+            ExtensionVersion extVersion,
+            String extensionVersion,
+            String extensionName,
+            String namespaceName,
+            String extensionUuid,
+            String namespaceUuid
+    ) {
+        if (mismatch(extVersion.getVersion(), extensionVersion))
             return false;
         var extension = extVersion.getExtension();
-        if (mismatch(extension.getName(), param.extensionName))
+        if (mismatch(extension.getName(), extensionName))
             return false;
         var namespace = extension.getNamespace();
-        if (mismatch(namespace.getName(), param.namespaceName))
-            return false;
-        if (mismatch(extension.getPublicId(), param.extensionUuid) || mismatch(namespace.getPublicId(), param.namespaceUuid))
+        if (mismatch(namespace.getName(), namespaceName))
             return false;
 
-        return true;
+        return !mismatch(extension.getPublicId(), extensionUuid) && !mismatch(namespace.getPublicId(), namespaceUuid);
     }
 
     private static boolean mismatch(String s1, String s2) {
@@ -615,7 +732,10 @@ public class LocalRegistryService implements IExtensionRegistry {
         var fileUrls = storageUtil.getFileUrls(latestVersions.values(), serverUrl, DOWNLOAD, ICON);
         searchEntries.forEach((extensionId, searchEntry) -> searchEntry.files = fileUrls.get(latestVersions.get(extensionId).getId()));
         if (options.includeAllVersions) {
-            var allActiveVersions = repositories.findActiveVersions(extensions).toList();
+            var allActiveVersions = repositories.findActiveVersions(extensions).stream()
+                    .sorted(ExtensionVersion.SORT_COMPARATOR)
+                    .collect(Collectors.toList());
+
             var activeVersionsByExtensionId = allActiveVersions.stream()
                     .collect(Collectors.groupingBy(ev -> ev.getExtension().getId()));
 
@@ -695,7 +815,7 @@ public class LocalRegistryService implements IExtensionRegistry {
                     .entrySet()
                     .stream()
                     .map(e -> e.getValue().get(0))
-                    .sorted(Comparator.<ExtensionVersion, SemanticVersion>comparing(ev -> ev.getSemanticVersion()).reversed())
+                    .sorted(ExtensionVersion.SORT_COMPARATOR)
                     .map(v -> new AbstractMap.SimpleEntry<>(v.getVersion(), createApiUrl(versionBaseUrl, v.getVersion())))
                     .forEach(e -> json.allVersions.put(e.getKey(), e.getValue()));
         }
@@ -716,14 +836,15 @@ public class LocalRegistryService implements IExtensionRegistry {
     }
 
     public ExtensionJson toExtensionVersionJson(
-            ExtensionVersionDTO extVersion,
-            ExtensionVersionDTO latest,
-            ExtensionVersionDTO latestPreRelease,
+            ExtensionVersion extVersion,
+            ExtensionVersion latest,
+            ExtensionVersion latestPreRelease,
             long reviewCount,
             boolean preview,
             Set<String> versions,
-            List<FileResourceDTO> resources,
-            Map<Long, List<NamespaceMembershipDTO>> membershipsByNamespaceId
+            String targetPlatformParam,
+            List<FileResource> resources,
+            Map<Long, List<NamespaceMembership>> membershipsByNamespaceId
     ) {
         var json = extVersion.toExtensionJson();
         json.preview = preview;
@@ -755,9 +876,82 @@ public class LocalRegistryService implements IExtensionRegistry {
         }
 
         json.allVersions = Maps.newLinkedHashMapWithExpectedSize(allVersions.size());
-        var versionBaseUrl = UrlUtil.createApiVersionBaseUrl(serverUrl, json.namespace, json.name, json.targetPlatform);
+        var versionBaseUrl = UrlUtil.createApiVersionBaseUrl(serverUrl, json.namespace, json.name, targetPlatformParam);
         for(var version : allVersions) {
             json.allVersions.put(version, createApiUrl(versionBaseUrl, version));
+        }
+
+        json.files = Maps.newLinkedHashMapWithExpectedSize(6);
+        var fileBaseUrl = UrlUtil.createApiFileBaseUrl(serverUrl, json.namespace, json.name, json.targetPlatform, json.version);
+        for (var resource : resources) {
+            var fileUrl = UrlUtil.createApiFileUrl(fileBaseUrl, resource.getName());
+            json.files.put(resource.getType(), fileUrl);
+        }
+
+        if (json.dependencies != null) {
+            json.dependencies.forEach(ref -> {
+                ref.url = createApiUrl(serverUrl, "api", ref.namespace, ref.extension);
+            });
+        }
+        if (json.bundledExtensions != null) {
+            json.bundledExtensions.forEach(ref -> {
+                ref.url = createApiUrl(serverUrl, "api", ref.namespace, ref.extension);
+            });
+        }
+        return json;
+    }
+
+    public ExtensionJson toExtensionVersionJsonV2(
+            ExtensionVersion extVersion,
+            ExtensionVersion latest,
+            ExtensionVersion latestPreRelease,
+            ExtensionVersion globalLatest,
+            ExtensionVersion globalLatestPreRelease,
+            long reviewCount,
+            boolean preview,
+            Set<String> versions,
+            String targetPlatformParam,
+            List<FileResource> resources,
+            Map<Long, List<NamespaceMembership>> membershipsByNamespaceId
+    ) {
+        var json = extVersion.toExtensionJson();
+        json.preview = preview;
+        json.verified = isVerified(extVersion, membershipsByNamespaceId);
+        json.namespaceAccess = "restricted";
+        json.unrelatedPublisher = !json.verified;
+        json.reviewCount = reviewCount;
+        var serverUrl = UrlUtil.getBaseUrl();
+        json.namespaceUrl = createApiUrl(serverUrl, "api", json.namespace);
+        json.reviewsUrl = createApiUrl(serverUrl, "api", json.namespace, json.name, "reviews");
+        json.url = createApiVersionUrl(serverUrl, json);
+
+        json.versionAlias = new ArrayList<>(2);
+        if (extVersion.equals(latest)) {
+            json.versionAlias.add("latest");
+        }
+        if (extVersion.equals(latestPreRelease)) {
+            json.versionAlias.add("pre-release");
+        }
+
+        var allVersions = new ArrayList<String>();
+        if(globalLatest != null) {
+            allVersions.add("latest");
+        }
+        if(globalLatestPreRelease != null) {
+            allVersions.add("pre-release");
+        }
+        if(versions != null && !versions.isEmpty()) {
+            var sortedVersions = new ArrayList<>(versions);
+            sortedVersions.sort(Comparator.<String, String>comparing(v -> v).reversed());
+            allVersions.addAll(sortedVersions);
+        }
+
+        if(!allVersions.isEmpty()) {
+            json.allVersions = Maps.newLinkedHashMapWithExpectedSize(allVersions.size());
+            var versionBaseUrl = UrlUtil.createApiVersionBaseUrl(serverUrl, json.namespace, json.name, targetPlatformParam);
+            for(var version : allVersions) {
+                json.allVersions.put(version, createApiUrl(versionBaseUrl, version));
+            }
         }
 
         json.files = Maps.newLinkedHashMapWithExpectedSize(6);
@@ -795,7 +989,7 @@ public class LocalRegistryService implements IExtensionRegistry {
                 && repositories.countMemberships(user, namespace) > 0;
     }
 
-    private boolean isVerified(ExtensionVersionDTO extVersion, Map<Long, List<NamespaceMembershipDTO>> membershipsByNamespaceId) {
+    private boolean isVerified(ExtensionVersion extVersion, Map<Long, List<NamespaceMembership>> membershipsByNamespaceId) {
         if (extVersion.getPublishedWith() == null) {
             return false;
         }
@@ -808,6 +1002,6 @@ public class LocalRegistryService implements IExtensionRegistry {
         var namespace = extVersion.getExtension().getNamespace().getId();
         var memberships = membershipsByNamespaceId.get(namespace);
         return memberships.stream().anyMatch(m -> m.getRole().equalsIgnoreCase(NamespaceMembership.ROLE_OWNER))
-                && memberships.stream().anyMatch(m -> m.getUserId() == user.getId());
+                && memberships.stream().anyMatch(m -> m.getUser().getId() == user.getId());
     }
 }
